[gd_scene load_steps=9 format=3 uid="uid://cvlvkujq8qul2"]

[ext_resource type="Script" path="res://Core/UI/HUD/SkillPicker/skill_option.gd" id="1_vpre0"]
[ext_resource type="Texture2D" uid="uid://c2s34f4bppq8e" path="res://Global/Skills/Actives/Ghost/ghost.png" id="2_v0p1y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7ldh"]
content_margin_left = 12.0
content_margin_top = 16.0
content_margin_right = 12.0
content_margin_bottom = 16.0
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.921569, 0.898039, 0.729412, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q77pa"]
resource_local_to_scene = true
content_margin_left = 2.0
content_margin_right = 2.0
bg_color = Color(0.921569, 0.898039, 0.729412, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id="Animation_25yk3"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkillInfoPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkillInfoPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.921569, 0.921569, 0.921569, 0.921569)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SkillInfoPanel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_msx6b"]
resource_name = "selected"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkillInfoPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkillInfoPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h8r1x"]
resource_name = "unselected"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkillInfoPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkillInfoPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tcswr"]
_data = {
"RESET": SubResource("Animation_25yk3"),
"selected": SubResource("Animation_msx6b"),
"unselected": SubResource("Animation_h8r1x")
}

[node name="SkillOption" type="Control"]
custom_minimum_size = Vector2(200, 345)
layout_mode = 3
anchors_preset = 0
offset_right = 205.0
offset_bottom = 345.0
script = ExtResource("1_vpre0")

[node name="SkillInfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
modulate = Color(0.921569, 0.921569, 0.921569, 0.921569)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 200.0
offset_bottom = 340.0
grow_horizontal = 2
pivot_offset = Vector2(110, 180)
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7ldh")

[node name="SkillInfoContainer" type="VBoxContainer" parent="SkillInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="SkillIconContainer" type="VBoxContainer" parent="SkillInfoPanel/SkillInfoContainer"]
layout_mode = 2

[node name="Separator" type="HSeparator" parent="SkillInfoPanel/SkillInfoContainer/SkillIconContainer"]
layout_mode = 2

[node name="SkillIcon" type="TextureRect" parent="SkillInfoPanel/SkillInfoContainer/SkillIconContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_v0p1y")
expand_mode = 1

[node name="SkillTopInfoContainer" type="VBoxContainer" parent="SkillInfoPanel/SkillInfoContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SkillName" type="Label" parent="SkillInfoPanel/SkillInfoContainer/SkillTopInfoContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Skill Name"
horizontal_alignment = 1
vertical_alignment = 2
text_overrun_behavior = 3

[node name="SkillType" type="Label" parent="SkillInfoPanel/SkillInfoContainer/SkillTopInfoContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_q77pa")
text = "Skill Type"
horizontal_alignment = 1
vertical_alignment = 2

[node name="SkillDescription" type="Label" parent="SkillInfoPanel/SkillInfoContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "Skill description that is very long in order to see how it behaves in the container layout"
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_tcswr")
}
